--- a/Music-App/View/Base.lproj/Main.storyboard
+++ b/Music-App/View/Base.lproj/Main.storyboard
@@ -40,7 +40,7 @@
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="QQS-kN-Mct">
                                                     <rect key="frame" x="15" y="7" width="129" height="112"/>
                                                     <subviews>
-                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="MLC-IW-Uxd">
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="MLC-IW-Uxd">
                                                             <rect key="frame" x="0.0" y="0.0" width="129" height="112"/>
                                                         </imageView>
                                                     </subviews>
